--- a/source/_posts/计算机理论[公共基础知识].md
+++ b/source/_posts/计算机理论[公共基础知识].md
@@ -16,7 +16,7 @@ coverImg:
 password:
 icons: [fas fa-star green]
 sidebar: [grid, toc, tags]
-thumbnail: https://gitee.com//BorenHU/BlogImage/raw/master/MarkDown/30.jpg
+thumbnail: 
 ---
 
 计算机系统公共基础知识
