--- a/source/_posts/计算机理论[计算机系统概述].md
+++ b/source/_posts/计算机理论[计算机系统概述].md
@@ -15,7 +15,7 @@ date: 2020-03-19 00:39:38
 img:
 coverImg:
 password:
-thumbnail: https://gitee.com//BorenHU/BlogImage/raw/master/MarkDown/30.jpg
+thumbnail: 
 ---
 
 计算机系统基础知识
