--- a/source/_posts/计算机理论[正则表达式].md
+++ b/source/_posts/计算机理论[正则表达式].md
@@ -15,7 +15,7 @@ date: 2020-04-20 09:20:35
 img:
 coverImg:
 password:
-thumbnail: https://gitee.com//BorenHU/BlogImage/raw/master/MarkDown/30.jpg
+thumbnail: 
 ---
 
 正则表达式(regular expression)描述了一种字符串匹配的模式（pattern），可以用来检查一个串是否含有某种子串、将匹配的子串替换或者从某个串中取出符合某个条件的子串等。
